@@ -12,13 +12,11 @@ import org.springframework.web.util.UriBuilder;
 import org.springframework.web.util.UriComponentsBuilder;
 import tgb.cryptoexchange.commons.enums.Merchant;
 import tgb.cryptoexchange.merchantdetails.details.DetailsRequest;
+import tgb.cryptoexchange.merchantdetails.details.DetailsRequestWithMethod;
 import tgb.cryptoexchange.merchantdetails.details.DetailsResponse;
 import tgb.cryptoexchange.merchantdetails.properties.OnlyPaysProperties;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
@@ -58,10 +56,10 @@ class OnlyPaysOrderCreationServiceTest {
     void bodyShouldBuildRequestObject(Integer amount, Method method, String id, String secret) {
         DetailsRequest detailsRequest = new DetailsRequest();
         detailsRequest.setAmount(amount);
-        detailsRequest.setMethods(List.of(DetailsRequest.MerchantMethod.builder().merchant(Merchant.ONLY_PAYS).method(method.name()).build()));
+        detailsRequest.setMethods(List.of(DetailsRequest.MerchantMethod.builder().merchant(Merchant.ONLY_PAYS).method(Collections.singletonList(method.name())).build()));
         when(onlyPaysProperties.id()).thenReturn(id);
         when(onlyPaysProperties.secret()).thenReturn(secret);
-        Request actual = onlyPaysOrderCreationService.body(detailsRequest);
+        Request actual = onlyPaysOrderCreationService.body(new DetailsRequestWithMethod(detailsRequest, method.name()));
         assertAll(
                 () -> assertEquals(id, actual.getApiId()),
                 () -> assertEquals(amount, actual.getAmount()),
@@ -76,11 +74,11 @@ class OnlyPaysOrderCreationServiceTest {
     @Test
     void bodyShouldBuildRequestObjectWithSimTrueIfMethodSim() {
         DetailsRequest detailsRequest = new DetailsRequest();
-        detailsRequest.setMethods(List.of(DetailsRequest.MerchantMethod.builder().merchant(Merchant.ONLY_PAYS).method(Method.SIM.name()).build()));
+        detailsRequest.setMethods(List.of(DetailsRequest.MerchantMethod.builder().merchant(Merchant.ONLY_PAYS).method(Collections.singletonList(Method.SIM.name())).build()));
         detailsRequest.setAmount(1000);
         when(onlyPaysProperties.id()).thenReturn("id");
         when(onlyPaysProperties.secret()).thenReturn("secret");
-        Request actual = onlyPaysOrderCreationService.body(detailsRequest);
+        Request actual = onlyPaysOrderCreationService.body(new DetailsRequestWithMethod(detailsRequest, Method.SIM.name()));
         assertAll(
                 () -> assertEquals(Method.SIM, actual.getMethod()),
                 () -> assertTrue(actual.getSim())
@@ -90,11 +88,11 @@ class OnlyPaysOrderCreationServiceTest {
     @Test
     void bodyShouldBuildRequestObjectWithBankAlfaTrueIfMethodAlfaAlfa() {
         DetailsRequest detailsRequest = new DetailsRequest();
-        detailsRequest.setMethods(List.of(DetailsRequest.MerchantMethod.builder().merchant(Merchant.ONLY_PAYS).method(Method.ALFA_ALFA.name()).build()));
+        detailsRequest.setMethods(List.of(DetailsRequest.MerchantMethod.builder().merchant(Merchant.ONLY_PAYS).method(Collections.singletonList(Method.ALFA_ALFA.name())).build()));
         detailsRequest.setAmount(1000);
         when(onlyPaysProperties.id()).thenReturn("id");
         when(onlyPaysProperties.secret()).thenReturn("secret");
-        Request actual = onlyPaysOrderCreationService.body(detailsRequest);
+        Request actual = onlyPaysOrderCreationService.body(new DetailsRequestWithMethod(detailsRequest, Method.ALFA_ALFA.name()));
         assertAll(
                 () -> assertEquals(Method.ALFA_ALFA, actual.getMethod()),
                 () -> assertNull(actual.getSim()),
@@ -105,11 +103,11 @@ class OnlyPaysOrderCreationServiceTest {
     @Test
     void bodyShouldBuildRequestObjectWithBankOzonTrueIfMethodOzonOzon() {
         DetailsRequest detailsRequest = new DetailsRequest();
-        detailsRequest.setMethods(List.of(DetailsRequest.MerchantMethod.builder().merchant(Merchant.ONLY_PAYS).method(Method.OZON_OZON.name()).build()));
+        detailsRequest.setMethods(List.of(DetailsRequest.MerchantMethod.builder().merchant(Merchant.ONLY_PAYS).method(Collections.singletonList(Method.OZON_OZON.name())).build()));
         detailsRequest.setAmount(1000);
         when(onlyPaysProperties.id()).thenReturn("id");
         when(onlyPaysProperties.secret()).thenReturn("secret");
-        Request actual = onlyPaysOrderCreationService.body(detailsRequest);
+        Request actual = onlyPaysOrderCreationService.body(new DetailsRequestWithMethod(detailsRequest, Method.OZON_OZON.name()));
         assertAll(
                 () -> assertEquals(Method.OZON_OZON, actual.getMethod()),
                 () -> assertNull(actual.getSim()),
